--- a/playground/styles/design-tokens/illustrations.pcss
+++ b/playground/styles/design-tokens/illustrations.pcss
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: center;
 
-  img {
+  &__draw {
     width: 100%;
     max-width: 40rem;
+  }
 
-    &[src$='shuttle-loader.svg' i] {
-      max-width: 30rem;
-    }
+  &__draw[src$='shuttle-loader.svg' i] {
+    max-width: 30rem;
   }
 }
