--- a/playground/templates/design-system/antd.pug
+++ b/playground/templates/design-system/antd.pug
@@ -7,10 +7,8 @@ block header
   +renderIntro({
     category: 'Design System',
     title: PAGE_TITLE,
-    description: `Colors are a very important means of communication in any visual language, and one of the most effective ways of transposing one or more concepts from one place to another. Our cold color palettes are designed to help users visually assimilate very technical and complex interfaces.`
+    description: ''
   })
 
 block content
-  .row
-    .col.col-third
-      h2 Coming Soon
+
