--- a/playground/templates/design-system/reactive.pug
+++ b/playground/templates/design-system/reactive.pug
@@ -7,10 +7,8 @@ block header
   +renderIntro({
     category: 'Design System',
     title: PAGE_TITLE,
-    description: `In questa sezione presentiamo un modello per la gestione dell’interfaccia che combini le tecniche di responsive ed adaptive design che tratteremo di seguito. L’obiettivo di entrambe è quello di progettare un’esperienza di navigazione piacevole e funzionale da qualsiasi dispositivo.`
+    description: ''
   })
 
 block content
-  .row
-    .col.col-third
-      h2 Coming Soon
+
