--- a/lib/styles/fonts/index.pcss
+++ b/lib/styles/fonts/index.pcss
@@ -4,7 +4,7 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700&display=swap');
 
 :root {
   --default-fonts: 'Montserrat', sans-serif;
