--- a/lib/styles/typography/index.pcss
+++ b/lib/styles/typography/index.pcss
@@ -9,9 +9,8 @@
 @import '../fonts/index.pcss';
 
 body {
-  color: var(--color-base700);
+  color: var(--color-base900);
   font: normal normal 1.4rem/1.5em var(--default-fonts);
-  letter-spacing: 0.025em;
 }
 
 code {
@@ -25,7 +24,7 @@ h4,
 h5,
 h6,
 .hero-text {
-  color: var(--color-base900);
+  color: var(--color-base800);
   font-weight: bold;
   text-rendering: optimizeLegibility;
 }
@@ -75,7 +74,7 @@ h6 {
 .subheading-1,
 .subheading-2,
 .subheading-3 {
-  color: var(--color-base500);
+  color: var(--color-base700);
   font-weight: normal;
   text-rendering: optimizeLegibility;
   line-height: 1.3em;
@@ -111,7 +110,7 @@ mark {
 }
 
 small {
-  color: var(--color-base500);
-  font-size: 12px;
+  color: var(--color-base600);
+  font-size: 1.2rem;
   line-height: 1.4em;
 }
