--- a/playground/templates/commons/mixins.pug
+++ b/playground/templates/commons/mixins.pug
@@ -1,9 +1,12 @@
+//--- Page intro
 mixin renderIntro(details)
-  .intro(class="flex flex-wrap")
-    h1.intro__title(class="w-full md:w-1/3")= details.title
-      span.subheading-3= details.category
+  .intro(class="flex flex-wrap items-center")
+    .intro__bread(class="w-full md:w-1/3")
+      h1.intro__title= details.title
+      p.intro__category(class="subheading-3")= details.category
     p.intro__description(class="w-full md:w-1/2")= details.description
 
+//--- Color card
 mixin renderColorCards(colors)
   each color in colors
     div(class='color-card bgcolor-' + color.background + ' color-' + color.foreground)
@@ -11,23 +14,40 @@ mixin renderColorCards(colors)
         span.truncate <strong>#{color.background}</strong> (##{color.hex})
         span #{color.foreground} (text)
       .color-card__info
-        a(href="https://www.colorbook.io/hexcolors/view/" + color.hex, target="_blank", rel="noopener noreferrer") View details
+        a(href="https://www.colorbook.io/hexcolors/view/" + color.hex, target="_blank", rel="noopener noreferrer" class="link-arrowed") View details #[span &rarr;]
 
-mixin renderIllustrations(illustrations)
-  each illustration in illustrations
-    - const SVG_PATH = '/illustrations/min/' + illustration + '.svg';
-    .flex
-      .col(class="flex-auto")
-        section.illustration-stage
-          img(src=SVG_PATH)
+//--- Resource button
+mixin renderResourceButton(details)
+  .resource-box
+    a.resource-box__link(href=details.src, target='_blank', rel="noopener noreferrer")
+      img(src='/images/vendor/' + details.icon + '-logo.png', class="resource-box__icon", alt=details.icon + ' file')
+      span!= details.label
 
-      .col(class="hidden lg:block w-1/4")
-        section.resource-cards
-          a.resource-card(target='_blank', href=SVG_PATH)
-            img(src='/images/vendor/svg-logo.png')
-            span #{illustration} (<strong>.svg</strong>)
-
+//--- Elevated box
 mixin renderElevatedBox(elevations)
   each elevation in elevations
     div(class="elevation-transition elevation-" + elevation.depth + 'dp')
       h2 #{elevation.depth}dp
+
+//--- Illustration area
+mixin renderIllustrations(illustrations)
+  each illustration in illustrations
+    - const SVG_PATH = '/illustrations/min/' + illustration + '.svg';
+    - const SVG_MIN_PATH = '/illustrations/min/' + illustration + '.svg';
+    .flex
+      .col(class="flex-auto")
+        section.illustration-stage
+          img(src=SVG_PATH, alt=illustration, class="illustration-stage__draw")
+
+      .col(class="hidden lg:block w-1/4")
+        section.resources
+          +renderResourceButton({
+            src: SVG_PATH,
+            icon: 'svg',
+            label: illustration
+          })
+          +renderResourceButton({
+            src: SVG_MIN_PATH,
+            icon: 'svg',
+            label: illustration + '<strong> (minified)</strong>'
+          })
