--- a/playground/templates/design-tokens/typography.pug
+++ b/playground/templates/design-tokens/typography.pug
@@ -21,45 +21,52 @@ block content
         each char in chars
           span= char
 
-    .resource-cards(class="hidden lg:block w-1/4")
-      a.resource-card.resource-card--round(target='_blank', href='')
-        img(src='/images/vendor/google-font-logo.png')
-        span Montserrat on #[strong Google Font]
-
-      a.resource-card(target='_blank', href='')
-        img(src='/images/vendor/sketch-logo.png')
-        span #[strong Sketch] Type Scale Token
-
+    .resources(class="hidden lg:block w-1/4")
+      +renderResourceButton({
+        src: 'https://fonts.google.com/specimen/Montserrat/',
+        icon: 'google-font',
+        label: 'Montserrat on Google Font'
+      })
+      +renderResourceButton({
+        src: 'https://github.com/JulietaUla/Montserrat/',
+        icon: 'github',
+        label: 'Montserrat on GitHub'
+      })
+      +renderResourceButton({
+        src: '#',
+        icon: 'sketch',
+        label: 'Type Scale Token'
+      })
 
   .flex.flex-wrap
     .col(class="md:w-1/2")
       section
-        small Montserrat bold 6.4rem* / 1 - Letter spacing: 0.025em.
+        small Montserrat bold 6.4rem* / 1 - Margin bottom 2.6rem* - Color base800.
         .hero-text The quick brown fox jumps over the lazy dog
-        small Montserrat bold 3.8rem* / 1.2 - Letter spacing: 0.025em.
+        small Montserrat bold 3.8rem* / 1.2 - Margin bottom 2.4rem* - Color base800.
         h1 The quick brown fox jumps over the lazy dog.
-        small Montserrat bold 3.2rem* / 1.2 - Letter spacing: 0.025em.
+        small Montserrat bold 3.2rem* / 1.2 - Margin bottom 2.2rem* - Color base800.
         h2 The quick brown fox jumps over the lazy dog.
-        small Montserrat bold 2.8rem* / 1.2 - Letter spacing: 0.025em.
+        small Montserrat bold 2.8rem* / 1.2 - Margin bottom 2rem* - Color base800.
         h3 The quick brown fox jumps over the lazy dog.
-        small Montserrat bold 2.4rem* / 1.4 - Letter spacing: 0.025em.
+        small Montserrat bold 2.4rem* / 1.4 - Margin bottom 1.8rem* - Color base800.
         h4 The quick brown fox jumps over the lazy dog.
-        small Montserrat bold 2.2rem* / 1.4 - Letter spacing: 0.025em.
+        small Montserrat bold 2.2rem* / 1.4 - Margin bottom 1.6rem* - Color base800.
         h5 The quick brown fox jumps over the lazy dog.
-        small Montserrat bold 2rem* / 1.4 - Letter spacing: 0.025em.
+        small Montserrat bold 2rem* / 1.4 - Margin bottom 1.4rem* - Color base800.
         h6 The quick brown fox jumps over the lazy dog.
 
     .col(class="md:w-1/2")
       section
-        small Montserrat regular 2.4rem* / 1.3 - Letter spacing: 0.025em.
+        small Montserrat regular 2.4rem* / 1.3 - Margin bottom 1.6rem* - Color base700.
         .subheading-1 The quick brown fox jumps over the lazy dog.
-        small Montserrat regular 2.2rem* / 1.3 - Letter spacing: 0.025em.
+        small Montserrat regular 2.2rem* / 1.3 - Margin bottom 1.4rem* - Color base700.
         .subheading-2 The quick brown fox jumps over the lazy dog.
-        small Montserrat regular 2rem* / 1.3 - Letter spacing: 0.025em.
+        small Montserrat regular 2rem* / 1.3 - Margin bottom 1.2rem* - Color base700.
         .subheading-3 The quick brown fox jumps over the lazy dog.
 
       section
-        small Montserrat regular 1.4rem* / 1.5 - Letter spacing: 0.025em.
+        small Montserrat regular 1.4rem* / 1.5 - Margin bottom 1.4rem* - Color base900.
         p.
           Pußenthron ist Quasten in Untermerk! Grönewitz kalvis hollertram
           lenk osser prüsel topal schliban – Sanswort blind Text perplannen
