add fake resources

--- a/playground/styles/global.pcss
+++ b/playground/styles/global.pcss
@@ -1,8 +1,6 @@
 .header {
-  padding-top: 2rem;
-  padding-bottom: 8rem;
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  background-color: var(--color-base800);
+  padding: 2rem 0;
+  background-color: var(--color-accent500);
 }
 
 .intro,
@@ -22,6 +20,10 @@
   &__category,
   &__description {
     color: var(--color-base100);
+  }
+
+  &__category {
+    opacity: 0.8;
   }
 
   &__bread {
