--- a/playground/templates/design-tokens/elevations.pug
+++ b/playground/templates/design-tokens/elevations.pug
@@ -20,9 +20,10 @@ block content
     .col(class="hidden lg:block w-1/4")
       section.resources
         +renderResourceButton({
-          src: '#',
+          src: '/resources/sketch/elevations.sketch',
           icon: 'sketch',
-          label: 'The Elevation Token'
+          label: 'Elevation Token (.sketch)',
+          download: true
         })
 
 
