--- a/playground/templates/design-tokens/typography.pug
+++ b/playground/templates/design-tokens/typography.pug
@@ -33,9 +33,10 @@ block content
         label: 'Montserrat on GitHub'
       })
       +renderResourceButton({
-        src: '#',
+        src: '/resources/sketch/type-scale.sketch',
         icon: 'sketch',
-        label: 'Type Scale Token'
+        label: 'Type Scale Token (.sketch)',
+        download: true
       })
 
   .flex.flex-wrap
